REGRESSION(265043@main): Fullscreen mode only shows video in some part of the screen on Twitter https://bugs.webkit.org/show_bug.cgi?id=258907 rdar://111095697

Reviewed by NOBODY (OOPS!).

265043@main started to use container queries in the video shadow root. As a side effect, this caused every call to
Document::resolveStyle() to start laying out the whole document (through frameView.layoutContext().layout()).

Adding to top layer & removing from top layer requires layout when the containing block changes.

We haven't really hit any problem with not marking for layout until now, because usually we apply the pseudo element styles
which include `position: fixed;` and other things, at the same time as adding to top layer, which marks them for layout anyway.

In the fullscreen case, we have a slightly different series:
```
ancestor->setFullscreenFlag(true); <- applies pseudo class styles (hence dirtying layout)

ancestor->document().resolveStyle(Document::ResolveStyleType::Rebuild); <- runs layout (clearing dirty layout)

ancestor->addToTopLayer(); <- changes the containing block without marking renderer for layout

// No layout!!
```

Add a special case in addToTopLayer/removeFromTopLayer, for cases where we don't process pseudo class style changes and containing block changes
under the same layout.

Also make it clear in the media-controls CSS that container queries are needed on all platforms (not just visionOS), since
WebVTT relies on it.

* LayoutTests/fullscreen/fullscreen-containing-block-change-expected.txt: Added.
* LayoutTests/fullscreen/fullscreen-containing-block-change.html: Added.
* Source/WebCore/Modules/modern-media-controls/controls/media-controls.css:
(.media-controls-container):
* Source/WebCore/Modules/modern-media-controls/controls/vision-media-controls.css:
(.media-controls-container): Deleted.
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::addToTopLayer):
(WebCore::Element::removeFromTopLayer):